Fixing FF layout issue

--- a/css/tr.layout.css
+++ b/css/tr.layout.css
@@ -333,7 +333,7 @@ h2{
 iframe{
 	border: none;
 	height: 100%;
-	width: 100%;
+	width: 99.9%;
 }
 
 iframe body{
